# POO_UJA

./: Exámanes-Práctico2  Fecha.cpp  Garito.cpp  README.md  Vehiculo.cpp  djutils.cpp  main.cpp
Exámenes/: Práctico2
Exámenes_Práctico2/: info
Práctica0/: info
Práctica1/: Vehiculo.h  info  main.cpp
Práctica2/: Doxyfile  ParametroNoValido.cpp  Temazo.cpp  Temazo.h  info
Práctica3/: Fecha.cpp  Fecha.h  Garito.h  ParametroNoValido.h  Temazo.cpp  Temazo.h  djutils.cpp  djutils.h  info  main.cpp
Práctica4/: Droide.cpp  Droide.h  Informe.cpp  PR4.puml  Piloto.cpp  Piloto.h  StarFighter.cpp  StarFighter.h  info  main.cpp
Práctica5/: Escuadron.cpp  Escuadron.h  Informe.cpp  Informe.h  Pieza.cpp  Pieza.h  Piloto.cpp  StarFighter.cpp  StarFighter.h  info  main.cpp
Práctica6/: EquipoMutante.cpp  EquipoMutante.h  Mutante.cpp  Mutante.h  Poder.cpp  Poder.h  PoderFisico.cpp  PoderFisico.h  PoderPsiquico.cpp  PoderPsiquico.h  info  main.cpp
Práctica7/: Mutante.cpp  Mutante.h  Poder.cpp  Poder.h  PoderPsiquico.cpp  PoderPsiquico.h  Replicante.cpp  Replicante.h  info  main.cpp  ordena.h
Práctica8/: Bloque.cpp  Bloque.h  CMakeLists.txt  Cofre.cpp  EmptyContainer.cpp  EmptyContainer.h  Espada.cpp  Espada.h  Filete.cpp  Filete.h  Item.cpp  Item.h  ItemApilable.cpp  ItemApilable.h  ItemUsable.cpp  ItemUsable.h  info  main.cpp
Práctica9/: Cofre.cpp  Cofre.h  Contenedor.cpp  Contenedor.h  ContenedorItems.cpp  ContenedorItems.h  Inventario.cpp  Inventario.h  info  main.cpp
SeminarioExPrácticas2/: Actividad.cpp  Actividad.h  CMakeLists.txt  Jornada.cpp  Jornada.h  info  (+9 more)
(+8 files in other folders)
